--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ error.log
 /dir/   
 only ignore outer dir
 dir/    
-ignore all dir whether it is inner or outer
+ignore all dir whethr it is inner or outer
